Navigation Drawer App using themes and other components

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,6 +2,7 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="176dp"
+    android:background="@color/colorPrimary"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
@@ -17,12 +18,11 @@
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:text="Fatiq Hussnain"
-        android:theme="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:text="fatiqhussnain1@gmail.com" />
+        android:text="fatiqhussnain1@gmail.com.com" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
