--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
 
         <item
-            android:id="@+id/miPerson"
+            android:id="@+id/miProfile"
             android:icon="@drawable/ic_profile"
             android:title="Profile" />
 
